--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/swagger": "^7.1.8",
     "@prisma/client": "^5.2.0",
     "@supabase/supabase-js": "^2.48.1",
+    "@vercel/node": "^5.1.4",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
