gestion de vercel 3

--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "build": "nest build",
     "postinstall": "prisma generate",
     "start": "node dist/main.js",
+    "start:prod": "node dist/main.js",
     "format": "prettier --write \"src/**/*.ts\"",
     "start:dev": "nodemon",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\"",
     "test": "jest",
     "test:watch": "jest --watch",
