--- a/package.json
+++ b/package.json
@@ -6,38 +6,40 @@
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
-    "postinstall": "prisma generate",
-    "start": "node dist/main.js",
-    "start:prod": "node dist/main.js",
     "format": "prettier --write \"src/**/*.ts\"",
-    "start:dev": "nodemon",
+    "start": "nest start",
+    "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
+    "start:prod": "node dist/main.js",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\"",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "prisma:generate": "prisma generate",
+    "prisma:studio": "prisma studio",
+    "prisma:migrate": "prisma migrate deploy"
   },
   "dependencies": {
-    "@nestjs/common": "^10.0.0",
+    "@nestjs/common": "^10.4.15",
     "@nestjs/config": "^4.0.0",
-    "@nestjs/core": "^10.0.0",
+    "@nestjs/core": "^10.4.15",
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.1.8",
     "@prisma/client": "^5.2.0",
     "@supabase/supabase-js": "^2.48.1",
-    "@vercel/node": "^5.1.4",
+    "@vercel/node": "^4.0.0",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "dotenv": "^16.4.7",
-    "firebase-admin": "^11.10.1",
-    "nodemon": "^3.1.9",
+    "firebase-admin": "^13.1.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
+    "rimraf": "^5.0.5",
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
